# heart_disease_risk_prediction

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  app.py  cdk_init.sh  hello.py  main.py  pyproject.toml  request.json  requirements.txt  setup.py
cdk_container_deploy_app/: app.py  requirements.txt
cdk_container_deploy_app/cdk_container_deploy_app/: ec2_instance_stack.py  ecr_repository_stack.py
cdk_container_deploy_app/tests/unit/: test_cdk_container_deploy_app_stack.py
cdk_container_deploy_app/user_data/: ec2_user_data.sh
docs/: Makefile  conf.py  make.bat
models/: trained_model.pkl
notebooks/: 1.EDA-lq.ipynb  2.Preprocessing_and_Model_Training-lq.ipynb
src/: get_data.py  utils.py
src/data/: make_dataset.py
src/features/: preprocess_data.py
src/models/: model_params.py  train_model.py
